fix parallax display on mobile & resizing

--- a/css/style.css
+++ b/css/style.css
@@ -75,16 +75,19 @@ ul.footer-links-ul li {
 .navbar-fixed {
   height: 0; }
 
+@media screen and (max-width: 720px) {
+  .parallax-container {
+    display: none; } }
+
 .parallax {
   z-index: 0; }
 
 .parallax-internhacks, .parallax-googlejump {
-  background-color: black;
+  background-color: rgba(0, 150, 136, 0.4) !important;
   color: white;
   display: none;
   /* for fadein animation */
   height: 100% !important;
-  opacity: .8;
   padding-top: 10%;
   position: absolute;
   width: 100%;
@@ -94,16 +97,55 @@ ul.footer-links-ul li {
     margin-left: auto;
     margin-right: auto;
     opacity: 1;
-    text-shadow: -0.2em -0.2em 0.2em black;
+    text-shadow: 2px 2px 2px black;
     width: 70%; }
     .parallax-internhacks .parallax-text .btn, .parallax-googlejump .parallax-text .btn {
       text-shadow: initial; }
 
-/*.preloader {
-	height: 100%;
-	width: auto;
-	background-color: gray;
-}*/
+@media screen and (min-width: 641px) {
+  .googlejump-replace {
+    background: url(../img/googlejump-large.jpeg); } }
+@media screen and (max-width: 640px) and (min-width: 400px) {
+  .googlejump-replace {
+    background: url(../img/googlejump-medium.jpeg); } }
+@media screen and (max-width: 399px) {
+  .googlejump-replace {
+    background: url(../img/googlejump-small.jpeg); } }
+
+@media screen and (min-width: 641px) {
+  .internhacks-replace {
+    background: url(../img/internhacks-large.jpeg); } }
+@media screen and (max-width: 640px) and (min-width: 400px) {
+  .internhacks-replace {
+    background: url(../img/internhacks-medium.jpeg); } }
+@media screen and (max-width: 399px) {
+  .internhacks-replace {
+    background: url(../img/internhacks-small.jpeg); } }
+
+.parallax-replace-on-small {
+  background-repeat: no-repeat !important;
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
+  background-size: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover !important;
+  background-repeat: no-repeat; }
+  @media screen and (min-width: 720px) {
+    .parallax-replace-on-small {
+      display: none; } }
+  .parallax-replace-on-small .parallax-replace-on-small-card {
+    background-color: rgba(0, 150, 136, 0.4) !important; }
+    .parallax-replace-on-small .parallax-replace-on-small-card .parallax-replace-on-small-text {
+      color: white;
+      padding-top: 20%;
+      padding-bottom: 20%;
+      text-shadow: 2px 2px 2px black; }
+      .parallax-replace-on-small .parallax-replace-on-small-card .parallax-replace-on-small-text .btn {
+        text-shadow: initial; }
+
 .subtitle {
   display: block;
   font-size: .7em; }
